Bug 1285157 - Remove SetTransport(aChannel) for NUWA r=cyu

MozReview-Commit-ID: HR8r9flyJDQ

--HG--
extra : rebase_source : bc0e284f6469292a0495501dc71017902247ddd3